gh page fix attempt 1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "sweetbags.net",
-    "homepage": "https://phantomforce260.github.io/sweetbags",
+    "name": "sweetbags",
+    "homepage": "https://phantomforce260.github.io/sweetbags/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
