Changing domain name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sweetbags",
-    "homepage": "https://phantomforce260.github.io/sweetbags/",
+    "homepage": "https://sweetbags.net",
     "private": true,
     "version": "0.0.0",
     "type": "module",
